--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
@@ -24,7 +24,7 @@
         <a href="#hero" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#education">Education</a>
-        <a href="#expertise">Technical Skills</a>
+        <a href="#technical-skills">Technical Skills</a>
         <a href="#myworks">Projects</a>
         <a href="#certifications">Certifications & Achievements</a>
         <a href="#contact">Contact</a>
@@ -132,11 +132,11 @@
       </div>
     </section>
 
-    <section id="education" class="fade_in">
+    <section id="education">
       <h2>Education</h2>
       <div class="edu-container">
         <!-- Primary -->
-        <div class="edu-item">
+        <div class="edu-item fade-in">
           <img
             src="img/primary_logo1.webp"
             alt="Shiber Bazar Govt. Primary School Logo"
@@ -150,7 +150,7 @@
         </div>
 
         <!-- High School -->
-        <div class="edu-item">
+        <div class="edu-item fade-in">
           <img
             src="img/high_school_logo.jpeg"
             alt="Bhatbari Ideal High School Logo"
@@ -167,7 +167,7 @@
         </div>
 
         <!-- College -->
-        <div class="edu-item">
+        <div class="edu-item fade-in">
           <img
             src="img/GSC_logo.jpeg"
             alt="Govt. Science College Logo"
@@ -181,7 +181,7 @@
         </div>
 
         <!-- University -->
-        <div class="edu-item">
+        <div class="edu-item fade-in">
           <img src="img/kuet_logo.png" alt="KUET Logo" class="edu-logo" />
           <div class="edu-details">
             <h3>University</h3>
@@ -208,7 +208,7 @@
       <h2 class="section-title">Technical Skills</h2>
       <div class="skills-container">
         <!-- Programming Languages -->
-        <div class="skill-card">
+        <div class="skill-card fade-in">
           <h3>Programming Languages</h3>
           <ul>
             <li>
@@ -243,7 +243,7 @@
         </div>
 
         <!-- Web Development -->
-        <div class="skill-card">
+        <div class="skill-card fade-in">
           <h3>Web Development</h3>
           <ul>
             <li>
@@ -266,7 +266,7 @@
         </div>
 
         <!-- AI & ML -->
-        <div class="skill-card">
+        <div class="skill-card fade-in">
           <h3>Artificial Intelligence & Machine Learning</h3>
           <ul>
             <li>
@@ -285,7 +285,7 @@
         </div>
 
         <!-- Problem Solving & Projects -->
-        <div class="skill-card">
+        <div class="skill-card fade-in">
           <h3>Problem Solving & Projects</h3>
           <ul>
             <li>
@@ -314,7 +314,7 @@
         <div class="project-grid">
           <div class="project-card">
             <img
-              src="img/numerical_assignment.png"
+              src="img/numerical_lab1.jpeg"
               alt="Numerical Method Assignment"
             />
             <div class="project-content">
@@ -333,7 +333,7 @@
           </div>
 
           <div class="project-card">
-            <img src="img/numerical_lab.png" alt="Numerical Method Lab" />
+            <img src="img/numerical.avif" alt="Numerical Method Lab" />
             <div class="project-content">
               <h4>Numerical Method Lab</h4>
               <p>
@@ -384,7 +384,7 @@
           </div>
 
           <div class="project-card">
-            <img src="img/ecommerce.png" alt="eCommerce API" />
+            <img src="img/ecommerce_api.jpg" alt="eCommerce API" />
             <div class="project-content">
               <h4>eCommerce Web API</h4>
               <p>
@@ -401,7 +401,7 @@
           </div>
 
           <div class="project-card">
-            <img src="img/placement.png" alt="Placement Prediction" />
+            <img src="img/placement.jpg" alt="Placement Prediction" />
             <div class="project-content">
               <h4>Placement Prediction</h4>
               <p>
@@ -418,7 +418,7 @@
           </div>
 
           <div class="project-card">
-            <img src="img/face_recognition.png" alt="Face Recognition" />
+            <img src="img/face_recognition.jpeg" alt="Face Recognition" />
             <div class="project-content">
               <h4>Face Recognition</h4>
               <p>
@@ -435,7 +435,7 @@
           </div>
 
           <div class="project-card">
-            <img src="img/yolo.png" alt="YOLO with DeepFace" />
+            <img src="img/deepface.png" alt="YOLO with DeepFace" />
             <div class="project-content">
               <h4>YOLO with DeepFace</h4>
               <p>
@@ -452,134 +452,100 @@
           </div>
         </div>
       </div>
-
-      <!-- Tinkercad Section -->
-      <div class="works-category">
-        <h3>Tinkercad Projects</h3>
-        <div class="project-grid">
-          <div class="project-card">
-            <img src="img/ultrasonic.png" alt="Ultrasonic Sensor" />
-            <div class="project-content">
-              <h4>Ultrasonic Distance Sensor</h4>
-              <p>
-                Arduino-based distance measurement system using HC-SR04
-                ultrasonic sensor.
-              </p>
-              <a
-                href="https://www.tinkercad.com/dashboard/designs/circuits"
-                target="_blank"
-                class="btn"
-                >See Project</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="img/motor_car.png" alt="Motor Car" />
-            <div class="project-content">
-              <h4>Motor Car</h4>
-              <p>
-                Arduino controlled motor car with forward, reverse, and speed
-                control features.
-              </p>
-              <a
-                href="https://www.tinkercad.com/dashboard/designs/circuits"
-                target="_blank"
-                class="btn"
-                >See Project</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="img/roll_number.png" alt="Roll Number Formation" />
-            <div class="project-content">
-              <h4>Roll Number Formation</h4>
-              <p>
-                LED matrix displaying roll number using Arduino digital output
-                pins.
-              </p>
-              <a
-                href="https://www.tinkercad.com/dashboard/designs/circuits"
-                target="_blank"
-                class="btn"
-                >See Project</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="img/lcd.png" alt="Super Bigery" />
-            <div class="project-content">
-              <h4>Super Bigery</h4>
-              <p>
-                Advanced LCD display circuit with custom character design and
-                animations.
-              </p>
-              <a
-                href="https://www.tinkercad.com/dashboard/designs/circuits"
-                target="_blank"
-                class="btn"
-                >See Project</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="img/adder.png" alt="Adder" />
-            <div class="project-content">
-              <h4>Adder</h4>
-              <p>
-                Basic adder circuit built using Arduino and logic gates to
-                perform binary addition.
-              </p>
-              <a
-                href="https://www.tinkercad.com/dashboard/designs/circuits"
-                target="_blank"
-                class="btn"
-                >See Project</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
-
-<section id="contact" class="fade_in">
-  <h2>Contact</h2>
-  <div class="contact-container">
-
-    <!-- Contact Info -->
-    <div class="contact-info">
-      <h3>Get in Touch</h3>
-      <p><i class="fas fa-user"></i> Jahid Hasan</p>
-      <p><i class="fas fa-map-marker-alt"></i> Khulna, Bangladesh</p>
-      <p><i class="fas fa-envelope"></i> hasan2107064@stud.kuet.ac.bd</p>
-      <p>
-        <i class="fab fa-github"></i>
-        <a href="https://github.com/Jahid-kuet" target="_blank">GitHub</a>
-      </p>
-      <p>
-        <i class="fab fa-linkedin"></i>
-        <a href="https://linkedin.com/in/jahid-hasan" target="_blank">LinkedIn</a>
-      </p>
+<!-- ===== CERTIFICATIONS & ACHIEVEMENTS ===== -->
+<section id="certifications">
+  <h2 class="section-title">Certifications & Achievements</h2>
+  <div class="certifications-container">
+    
+    <!-- Dean's Award 1st Year -->
+    <div class="cert-card fade-in">
+      <img src="img/deans1.jpg" alt="Dean's Award 1st Year" />
+      <div class="cert-content">
+        <h3>Dean's Award – 1st Year</h3>
+        <p>Recognized for exceptional academic performance with CGPA above 3.75.</p>
+        <span class="date">2023</span>
+      </div>
     </div>
 
-    <!-- Contact Form -->
-    <form
-      action="mailto:hasan2107064@stud.kuet.ac.bd"
-      method="POST"
-      enctype="text/plain"
-      class="contact-form"
-    >
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <!-- Dean's Award 2nd Year -->
+    <div class="cert-card fade-in">
+      <img src="img/certi.jpg" alt="Dean's Award 2nd Year" />
+      <div class="cert-content">
+        <h3>Dean's Award – 2nd Year</h3>
+        <p>Achieved the Dean's Award again for CGPA above 3.75 across the year.</p>
+        <span class="date">2024</span>
+      </div>
+    </div>
 
+    <!-- Competitive Hackathon -->
+    <div class="cert-card fade-in">
+      <img src="img/certi3.jpg" alt="Hackathon Winner" />
+      <div class="cert-content">
+        <h3>Hackathon Winner</h3>
+        <p>1st place at KUET Inter-University Hackathon with an AI-powered project.</p>
+        <span class="date">2024</span>
+      </div>
+    </div>
+
+    <!-- Machine Learning Specialization -->
+    <div class="cert-card fade-in">
+      <img src="img/deans1.jpg" alt="Machine Learning Specialization" />
+      <div class="cert-content">
+        <h3>Machine Learning Specialization</h3>
+        <p>Completed Coursera's ML Specialization by Andrew Ng, gaining hands-on ML experience.</p>
+        <span class="date">2023</span>
+      </div>
+    </div>
   </div>
 </section>
+
+<!-- ==== IMAGE MODAL ==== -->
+<div id="imgModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="modalImage" />
+</div>
+
+    <section id="contact" class="fade_in">
+      <h2>Contact</h2>
+      <div class="contact-container">
+        <!-- Contact Info -->
+        <div class="contact-info">
+          <h3>Get in Touch</h3>
+          <p><i class="fas fa-user"></i> Jahid Hasan</p>
+          <p><i class="fas fa-map-marker-alt"></i> Khulna, Bangladesh</p>
+          <p><i class="fas fa-envelope"></i> hasan2107064@stud.kuet.ac.bd</p>
+          <p>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Jahid-kuet" target="_blank">GitHub</a>
+          </p>
+          <p>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://linkedin.com/in/jahid-hasan" target="_blank"
+              >LinkedIn</a
+            >
+          </p>
+        </div>
+
+        <!-- Contact Form -->
+        <form
+          action="mailto:hasan2107064@stud.kuet.ac.bd"
+          method="POST"
+          enctype="text/plain"
+          class="contact-form"
+        >
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea
+            name="message"
+            placeholder="Your Message"
+            rows="5"
+            required
+          ></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </section>
 
     <footer>
       <p>@2025 Jahid Hasan | All Rights Reserved</p>
@@ -593,6 +559,6 @@
     <button id="backToTop">↑</button>
     <!-- adding js -->
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-    <script src="first.js"></script>
+    <script src="first1.js"></script>
   </body>
 </html>
